--- a/deployment/ansible-vitam/roles/syslogd_configure/tasks/syslogng.yml
+++ b/deployment/ansible-vitam/roles/syslogd_configure/tasks/syslogng.yml
@@ -8,7 +8,9 @@
     dest: /etc/syslog-ng/conf.d/vitam.conf
     owner: root
     mode: 0644
-  when: groups['hosts-logstash']|length > 0
+  when:
+    - groups['hosts-logstash']|length > 0
+    - consul_disabled is not defined or consul_disabled |lower != "true"
   notify:
     - restart syslogng
 
