--- a/deployment/ansible-vitam/roles/vitam/handlers/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/handlers/main.yml
@@ -19,7 +19,7 @@
 
 - name: "Check if service is listening on service port (http check)"
   uri:
-    url: "http://{{ ip_service }}:{{ vitam_struct.port_admin }}/admin/v1/status"
+    url: "http://{{ ip_admin }}:{{ vitam_struct.port_admin }}/admin/v1/status"
   register: result
   until:
     - result.status is defined
