--- a/sources/functional-administration/functional-administration-common/pom.xml
+++ b/sources/functional-administration/functional-administration-common/pom.xml
@@ -86,10 +86,15 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-	    <dependency>
-	        <groupId>org.apache.logging.log4j</groupId>
-	        <artifactId>log4j-core</artifactId>
-	        <scope>test</scope>
-	    </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-	</project>
+</project>
