--- a/deployment/environments/group_vars/all/postinstall_param.yml
+++ b/deployment/environments/group_vars/all/postinstall_param.yml
@@ -11,4 +11,4 @@ vitam_additional_securityprofiles:
         status: ACTIVE # ACTIVE or INACTIVE
         enable_control: true # can be true or false , must be true if fine permissions tuning (see above) ; if false, no permissions
         permissions: "[ { \"tenant\": 2, \"AccessContracts\": [], \"IngestContracts\": [] }]" # you can specify different permissions for all tenants that have to be associated to "[{perms1},{perms2}, ...]" where permsX is  something like { \"tenant\": 2, \"AccessContracts\": [], \"IngestContracts\": [] }
-        certificates: ['cert1.crt'] # list of public certificates files stored in {{inventory_dir}}/certs/client-external/clients/
+        certificates: ['cert1.crt'] # list of public certificates files stored in {{inventory_dir}}/certs/client-external/clients/ ; MUST BE written as external/<file.crt> to be compatible with generate_stores.sh play ; so files to be added MUST BE stored in {{inventory_dir}}/certs/client-external/clients/external/.
