6036 - transfer reply ATR

--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -114,3 +114,6 @@ permissionsWithoutPersonalCertificate:
   - 'managementcontracts:read'
   - 'managementcontracts:id:read'
   - 'managementcontracts:id:update'
+  - 'transfers:reply'
+  - 'transfers:create'
+  - 'transfers:id:sip:read'
