Disabled gather facts more often so deployment may be faster

--- a/deployment/ansible-vitam/roy_build_signature.yml
+++ b/deployment/ansible-vitam/roy_build_signature.yml
@@ -1,9 +1,11 @@
 ---
 
 - hosts: hosts-worker
+  gather_facts: no
   roles:
     - roy_build_signature
 
 - hosts: hosts-ingest-external
+  gather_facts: no
   roles:
     - roy_build_signature
