--- a/deployment/ansible-vitam-extra/ihm-recette.yml
+++ b/deployment/ansible-vitam-extra/ihm-recette.yml
@@ -6,6 +6,8 @@
     - checks
 
 - hosts: hosts-ihm-recette
+  gather_facts: no
+  any_errors_fatal: true
   roles:
     - ihm-recette-data-sets
     - vitam
@@ -20,6 +22,8 @@
 
 
 - hosts: hosts-ihm-recette
+  gather_facts: no
+  any_errors_fatal: true
   roles:
     - ihm-recette-front
     - {role: ihm-recette-clone-tests, when: (vitam_tests_gitrepo_url is defined) and (vitam_tests_gitrepo_url != '') and (vitam_tests_branch is not defined or vitam_tests_branch != "")}
