--- a/deployment/ansible-vitam-extra/metricbeat.yml
+++ b/deployment/ansible-vitam-extra/metricbeat.yml
@@ -1,5 +1,6 @@
 ---
 
 - hosts: vitam
+  any_errors_fatal: true
   roles:
     - {role: metricbeat, when: "{{groups['hosts-elasticsearch-log'] | length > 0}}" }
