--- a/deployment/ansible-vitam/vitam.yml
+++ b/deployment/ansible-vitam/vitam.yml
@@ -14,6 +14,7 @@
 # Confirm launching this playbook
 - hosts: all
   any_errors_fatal: yes
+  gather_facts: no
   vars_prompt:
     name: "confirmation"
     prompt: "Are you sure you want to run this playbook? Answer with 'YES'"
@@ -32,30 +33,35 @@
 
 ### HOSTS NORMALIZATION ###
 - hosts: vitam
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - normalize-host
 
 ### syslog daemon install
 - hosts: vitam
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - syslogd
 
 ### CONSUL INSTALLATION ###
 - hosts: hosts-consul-server
+  gather_facts: no
   any_errors_fatal: true
   serial: 1
   roles:
     - consul
 
 - hosts: vitam
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - { role: consul, when: "( inventory_hostname not in groups['hosts-consul-server'] ) and ( consul_disabled is not defined or consul_disabled |lower != 'true' )" }
 
 # ### ELASTICSEARCH LOG INSTALLATION ###
 - hosts: hosts-elasticsearch-log
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - elasticsearch-cluster
@@ -67,11 +73,13 @@
 
 ### LOG SERVER INSTALLATION ###
 - hosts: hosts-logstash
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - logstash
 
 - hosts: hosts-kibana-log
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - kibana
@@ -85,12 +93,14 @@
 
 ### syslog daemon configuration ###
 - hosts: vitam
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - syslogd_configure
 
 ### ELASTICSEARCH DATA INSTALLATION ###
 - hosts: hosts-elasticsearch-data
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - elasticsearch-cluster
@@ -99,12 +109,15 @@
     composant: "{{ elasticsearch.data }}"
 
 - hosts: hosts-cerebro
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - role: cerebro
 
 # OMA: to be discussed wether place & servers are best one..
 - hosts: hosts-kibana-data
+  gather_facts: no
+  any_errors_fatal: true
   roles:
     - vitam
   vars:
@@ -112,6 +125,7 @@
 
 ## KIBANA DATA INSTALLATION ###
 - hosts: hosts-kibana-data
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - kibana
@@ -129,6 +143,7 @@
 
 ## VITAM ####################################################################
 - hosts: hosts-storage-offer-default
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -141,6 +156,7 @@
     vitam_certificate_client_type: "storage"
 
 - hosts: hosts-storage-engine
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -155,6 +171,7 @@
 
 
 - hosts: hosts-metadata
+  gather_facts: no
   any_errors_fatal: true
   serial: 1
   roles:
@@ -167,6 +184,7 @@
 
 
 - hosts: hosts-logbook
+  gather_facts: no
   any_errors_fatal: true
   serial: 1
   roles:
@@ -180,6 +198,7 @@
 
 
 - hosts: hosts-workspace
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -188,6 +207,7 @@
 
 
 - hosts: hosts-functional-administration
+  gather_facts: no
   any_errors_fatal: true
   serial: 1
   roles:
@@ -200,6 +220,7 @@
 
 
 - hosts: hosts-security-internal
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -208,6 +229,7 @@
     vitam_struct: "{{ vitam.security_internal }}"
 
 - hosts: hosts-processing
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -215,6 +237,7 @@
     vitam_struct: "{{ vitam.processing }}"
 
 - hosts: hosts-batch-report
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -222,6 +245,7 @@
     vitam_struct: "{{ vitam.batchreport }}"
 
 - hosts: hosts-worker
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - siegfried
@@ -232,6 +256,7 @@
     vitam_timestamp_usage: secure-logbook
 
 - hosts: hosts-access-internal
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -239,6 +264,7 @@
     vitam_struct: "{{ vitam.accessinternal }}"
 
 - hosts: hosts-access-external
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -252,6 +278,7 @@
 
 # 2 differents steps, due to https://github.com/ansible/ansible/issues/15476
 - hosts: hosts-access-external
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - { role: init_pronom, when: primary_site | lower == "true" }
@@ -264,6 +291,7 @@
     vitam_certificate_client_type: "external"
 
 - hosts: hosts-ingest-internal
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
@@ -271,6 +299,7 @@
     vitam_struct: "{{ vitam.ingestinternal }}"
 
 - hosts: hosts-ingest-external
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - siegfried
@@ -287,6 +316,7 @@
     vitam_certificate_client_type: "external"
 
 - hosts: hosts-ihm-demo
+  gather_facts: no
   any_errors_fatal: true
   roles:
     - vitam
