item 6033 - flag us in transfer + warning if already in transfer.

--- a/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
+++ b/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
@@ -1415,6 +1415,9 @@
     "_sps": {
       "type": "keyword"
     },
+    "_opts": {
+      "type": "keyword"
+    },
     "_uds": {
       "type": "object"
     },
