--- a/deployment/ansible-vitam/roles/metadata/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/metadata/tasks/main.yml
@@ -26,6 +26,7 @@
     - storegraph.sh
     - computed_inherited_rules.sh
     - purge_dip.sh
+    - purge_transfersSIP.sh
     - reconstruction_payload.json
 
 - name: Copy the metadata reconstruction conf
@@ -112,3 +113,22 @@
     state: "started"
   when: ( inventory_hostname == groups["hosts_metadata"] | last ) and
     ( primary_site | lower == "true" )
+
+- name: Ensure vitam-metadata-purge-transfers-SIP timer is stopped
+  systemd:
+    name: "vitam-metadata-purge-transfers-SIP.timer"
+    daemon_reload: "yes"
+    enabled: "no"
+    state: "stopped"
+  when: ( primary_site | lower == "false" ) or
+    ( inventory_hostname != groups["hosts_metadata"] | last )
+
+- name: Ensure vitam-metadata-purge-transfers-SIP timer is started
+  systemd:
+    name: "vitam-metadata-purge-transfers-SIP.timer"
+    daemon_reload: "yes"
+    enabled: "yes"
+    state: "started"
+  when: ( inventory_hostname == groups["hosts_metadata"] | last ) and
+    ( primary_site | lower == "true" )
+
