--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -104,8 +104,9 @@ vitam_timers:
         - name: vitam-metadata-computed-inherited-rules
           frequency: "*-*-* 02:30:00"
         - name: vitam-metadata-purge-dip
-          frequency: "*-*-* 02:15:00"
-
+          frequency: "*-*-* 02:20:00"
+        - name: vitam-metadata-purge-transfers-SIP
+          frequency: "*-*-* 02:20:00"
 
 ### consul ###
 # FIXME: Consul à la racine pour le moment à cause de problèmes de récursivité dans le parsing yaml
@@ -420,6 +421,7 @@ vitam:
         acceptableRequestTime: 10 # value in seconds
         # DIP cleanup delay (in minutes)
         dipTimeToLiveInMinutes: 10080 # 7 days
+        transfersSIPTimeToLiveInMinutes: 10080 # 7 days
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
