--- a/deployment/environments/group_vars/all/offers_opts.yml.example
+++ b/deployment/environments/group_vars/all/offers_opts.yml.example
@@ -14,7 +14,7 @@ vitam_strategy:
 #    vitam_site_name: distant-dc2
 #    distant: true # Only add this parameter when distant offer (not on same platform)
 
-# !!! PREVIEW V3 !!! DO NOT DECLARE 'other_strategies' FOR NOW.
+# WARNING : multi-strategy is a BETA functionality
 # More strategies can be added but are optional
 # Strategy name must only use [a-z][a-z0-9-]* pattern
 # Any strategy must contain at least one offer
