--- a/deployment/ansible-vitam-extra/roles/generate_hostvars_for_2_network_interfaces/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/generate_hostvars_for_2_network_interfaces/tasks/main.yml
@@ -1,13 +1,22 @@
 ---
 
 - name: Ensure host_vars directory exists
-  local_action: file
-    path={{ inventory_dir }}/host_vars
-    state=directory
-    mode=0750
+  local_action:
+    module: file
+    path: "{{ inventory_dir }}/host_vars"
+    state: "directory"
+    mode: "0750"
 
-- name: Generate host_vars file for host
-  local_action: template
-     src=host-vars.j2
-     dest={{ inventory_dir }}/host_vars/{{ inventory_hostname }}
+- name: Add ip_service var to host_vars
+  local_action:
+    module: lineinfile
+    create: yes 
+    path: "{{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
+    line: "{% if ansible_eth0 is defined %}ip_service: {{ ansible_eth0.ipv4.address }}{% endif %}"
 
+- name: Add ip_admin var to host_vars
+  local_action:
+    module: lineinfile
+    create: yes 
+    path: "{{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
+    line: "{% if ansible_eth1 is defined %}ip_admin: {{ ansible_eth1.ipv4.address }}{% endif %}"
