--- a/deployment/ansible-vitam-extra/roles/generate_hostvars_for_localhost/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/generate_hostvars_for_localhost/tasks/main.yml
@@ -1,13 +1,22 @@
 ---
 
 - name: Ensure host_vars directory exists
-  local_action: file
-    path={{ inventory_dir }}/host_vars
-    state=directory
-    mode=0750
+  local_action:
+    module: file
+    path: "{{ inventory_dir }}/host_vars"
+    state: "directory"
+    mode: "0750"
 
-- name: Generate host_vars file for host
-  local_action: template
-     src=host-vars.j2
-     dest={{ inventory_dir }}/host_vars/{{ inventory_hostname }}
+- name: Add ip_service var to host_vars
+  local_action:
+    module: lineinfile
+    create: yes 
+    path: "{{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
+    line: "ip_service: 127.0.0.1"
 
+- name: Add ip_admin var to host_vars
+  local_action:
+    module: lineinfile
+    create: yes 
+    path: "{{ inventory_dir }}/host_vars/{{ inventory_hostname }}"
+    line: "ip_admin: 127.0.0.1"
