Bug #5930 seda organization descriptive metadata extension

--- a/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
+++ b/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
@@ -115,8 +115,18 @@
       "properties": {
         "Identifier": {
           "type": "keyword"
+        },
+        "OrganizationDescriptiveMetadata": {
+          "properties": {
+            "Identifier": {
+              "type": "keyword"
+            },
+              "OrganizationDescriptiveMetadata": {
+                "type": "object"
+              }
+            }
+          }
         }
-      }
     },
     "OriginatingAgencyArchiveUnitIdentifier": {
       "type": "keyword"
