6071 - Make es scroll timeout configurable

--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -122,6 +122,8 @@ vitam:
     # Ontology cache settings (max entries in cache & retention timeout in seconds)
     ontologyCacheMaxEntries: 100
     ontologyCacheTimeoutInSeconds: 300
+    # Elasticsearch scroll timeout in milliseconds settings
+    elasticSearchScrollTimeoutInMilliseconds: 300000
     accessexternal:
         # Component name: do not modify
         vitam_component: access-external
