Change transfer TTL conf in metadata.

--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -12,6 +12,9 @@ schemaValidatorCacheTimeoutInSeconds: 300
 # DIP purge service (in minutes)
 dipTimeToLiveInMinutes: 10080 # 7 days
 
+# TRANSFER purge service (in minutes)
+transfersSIPTimeToLiveInMinutes: 10080 # 7 days
+
 # Configuration MongoDB
 mongoDbNodes:
 - dbHost: localhost
