--- a/deployment/environments/group_vars/all/vault-keystores.yml.example
+++ b/deployment/environments/group_vars/all/vault-keystores.yml.example
@@ -1,25 +1,26 @@
+# NO UNDERSCORE ALLOWED IN VALUES
 keystores:
   server:
-    offer: change_it_817NR75vWsZtgAgJ
-    access_external: change_it_MZFD2YM4279miitu
-    ingest_external: change_it_a2C74cQhy84BLWCr
-    ihm_recette: change_it_4FWYVK1347mxjGfe
-    ihm_demo: change_it_6kQ16eyDY7QPS9fy
+    offer: changeit817NR75vWsZtgAgJ
+    access_external: changeitMZFD2YM4279miitu
+    ingest_external: changeita2C74cQhy84BLWCr
+    ihm_recette: changeit4FWYVK1347mxjGfe
+    ihm_demo: changeit6kQ16eyDY7QPS9fy
   client_external:
-    ihm_demo: change_it_GT38hhTiA32x1PLy
-    gatling: change_it_2sBC5ac7NfGF9Qj7
-    ihm_recette: change_it_dAZ9Eq65UhDZd9p4
-    reverse: change_it_e5XTzb5yVPcEX464
-    vitam_admin_int: change_it_z6xZe5gDu7nhDZd9
+    ihm_demo: changeitGT38hhTiA32x1PLy
+    gatling: changeit2sBC5ac7NfGF9Qj7
+    ihm_recette: changeitdAZ9Eq65UhDZd9p4
+    reverse: changeite5XTzb5yVPcEX464
+    vitam_admin_int: changeitz6xZe5gDu7nhDZd9
   client_storage:
-    storage: change_it_647D7LWiyM6qYMnm
+    storage: changeit647D7LWiyM6qYMnm
   timestamping:
-    secure_logbook: change_it_Mn9Skuyx87VYU62U
-    secure_storage: change_it_e5gDu9Skuy84BLW9
+    secure_logbook: changeitMn9Skuyx87VYU62U
+    secure_storage: changeite5gDu9Skuy84BLW9
 truststores:
-  server: change_it_xNe4JLfn528PVHj7
-  client_external: change_it_J2eS93DcPH1v4jAp
-  client_storage: change_it_HpSCa31aG8ttB87S
+  server: changeitxNe4JLfn528PVHj7
+  client_external: changeitJ2eS93DcPH1v4jAp
+  client_storage: changeitHpSCa31aG8ttB87S
 grantedstores:
-  client_external: change_it_LL22HkmDCA2e2vj7
-  client_storage: change_it_R3wwp5C8KQS76Vcu
+  client_external: changeitLL22HkmDCA2e2vj7
+  client_storage: changeitR3wwp5C8KQS76Vcu
