Story 6099 - Modify limit on MD strategies in Management Contracts and Ingest
Ref #39

* Reconstruction of metadatas UNIT and OBJECTGROUP by strategies
* Check that strategy used for MD storage declares a referent offer
* Add strategy check log waning

--- a/deployment/environments/group_vars/all/offers_opts.yml.example
+++ b/deployment/environments/group_vars/all/offers_opts.yml.example
@@ -19,11 +19,11 @@ vitam_strategy:
 # Strategy name must only use [a-z][a-z0-9-]* pattern
 # Any strategy must contain at least one offer
 # This list of offers is ordered. It can and has to be completed if more offers are necessary
-# Offers can't be defined as referent other_strategies
+# Every strategy can define at most one referent offer.
 # other_strategies:
 #  metadata:
 #    - name: offer-fs-1
-#      referent: false
+#      referent: true
 #    - name: offer-fs-2
 #      referent: false
 #  binary:
