--- a/sources/common/common-private/pom.xml
+++ b/sources/common/common-private/pom.xml
@@ -180,7 +180,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!-- Keep for test case -->
 
         <!-- Metrics dependencies -->
