--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -101,13 +101,14 @@
         <maven.resources.version>3.1.0</maven.resources.version>
         <maven.source.version>3.1.0</maven.source.version>
         <maven.dependency.version>3.1.1</maven.dependency.version>
+        <maven-dependency-analyzer.version>1.11.1</maven-dependency-analyzer.version>
         <maven.site.version>3.8.2</maven.site.version>
         <maven.assembly.version>3.1.1</maven.assembly.version>
         <maven.exec.version>1.6.0</maven.exec.version>
         <maven.failsafe.version>2.19.1</maven.failsafe.version>
         <maven.javadoc.version>3.1.1</maven.javadoc.version>
         <maven.exec.version>1.6.0</maven.exec.version>
-	<maven.dependencycheck.version>5.2.2</maven.dependencycheck.version>
+        <maven.dependencycheck.version>5.2.2</maven.dependencycheck.version>
         <git-commit-id-plugin.version>3.0.1</git-commit-id-plugin.version>
         <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
         <license-maven-plugin.version>1.20</license-maven-plugin.version>
@@ -194,6 +195,7 @@
         <bouncycastle.version>1.60</bouncycastle.version>
         <diffutils.version>1.3.0</diffutils.version>
         <jaxb2.version>1.0.2</jaxb2.version>
+        <jaxb.version>2.3.2</jaxb.version>
         <httpclient.version>4.5.7</httpclient.version>
         <netty.version>4.1.31.Final</netty.version>
         <commons-compress.version>1.19</commons-compress.version>
@@ -220,7 +222,7 @@
         <json-schema-core.version>1.2.5</json-schema-core.version>
         <json-patch.version>1.9</json-patch.version>
         <jackson-coreutils.version>1.8</jackson-coreutils.version>
-        <maven.jaxb2.version>0.13.1</maven.jaxb2.version>
+        <maven.jaxb2.version>0.14.0</maven.jaxb2.version>
         <jaxb2-basics.version>0.6.5</jaxb2-basics.version>
     </properties>
 
@@ -641,9 +643,9 @@
                         <cveUrlBase>${env.SERVICE_REPOSITORY_URL}/nist/nvdcve-1.0-%d.json.gz</cveUrlBase>
                         <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                         <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
-			            <failOnError>false</failOnError>
+                        <failOnError>false</failOnError>
                     </configuration>
-                    
+
                     <executions>
                         <execution>
                             <goals>
@@ -661,7 +663,7 @@
                     <!-- Dependency manipulation (copy, unpack) and analysis. -->
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>${maven.dependency.version}</version>
- 		            <executions>
+                    <executions>
                         <execution>
                             <id>analyze</id>
                             <goals>
@@ -670,15 +672,40 @@
                             <configuration>
                                 <failOnWarning>false</failOnWarning>
                                 <ignoreNonCompile>false</ignoreNonCompile>
+
+                                <!-- ignore jsr305 for both "used but undeclared" and "declared but unused" -->
+                                <ignoredDependencies>
+                                    <ignoredDependency>com.google.code.findbugs:jsr305</ignoredDependency>
+                                </ignoredDependencies>
+
+                                <!-- ignore annotations for "used but undeclared" warnings -->
+                                <ignoredUsedUndeclaredDependencies>
+                                    <ignoredUsedUndeclaredDependency>com.google.code.findbugs:annotations
+                                    </ignoredUsedUndeclaredDependency>
+                                </ignoredUsedUndeclaredDependencies>
+
+                                <!-- ignore annotations for "unused but declared" warnings -->
                                 <ignoredUnusedDeclaredDependencies>
-                                    <ignoredUsedUndeclaredDependency>org.slf4j:jcl-over-slf4j</ignoredUsedUndeclaredDependency>
-                                    <ignoredUsedUndeclaredDependency>org.slf4j:slf4j-log4j12</ignoredUsedUndeclaredDependency>
-                                    <ignoredUnusedDeclaredDependency>org.glassfish.jaxb:jaxb-runtime</ignoredUnusedDeclaredDependency>
+                                    <ignoredUsedUndeclaredDependency>org.slf4j:jcl-over-slf4j
+                                    </ignoredUsedUndeclaredDependency>
+                                    <ignoredUsedUndeclaredDependency>org.slf4j:slf4j-log4j12
+                                    </ignoredUsedUndeclaredDependency>
+                                    <ignoredUnusedDeclaredDependency>org.glassfish.jaxb:jaxb-runtime
+                                    </ignoredUnusedDeclaredDependency>
                                     <!-- if any others... -->
+                                    <ignoredUnusedDeclaredDependency>com.google.code.findbugs:annotations
+                                    </ignoredUnusedDeclaredDependency>
                                 </ignoredUnusedDeclaredDependencies>
                             </configuration>
                         </execution>
                     </executions>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.shared</groupId>
+                            <artifactId>maven-dependency-analyzer</artifactId>
+                            <version>${maven-dependency-analyzer.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <!-- Environmental constraint checking (Maven Version, JDK etc), User
@@ -850,7 +877,7 @@
                         <targetOS>linux</targetOS>
                         <requires>
                             <require>systemd</require>
-                            <require>java-1.8.0</require>
+                            <require>${java.version}</require>
                             <require>vitam-user-${unix.user}</require>
                         </requires>
                         <defaultDirmode>750</defaultDirmode>
@@ -1060,6 +1087,13 @@
                 <artifactId>jackson-module-jaxb-annotations</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+
             <dependency>
                 <groupId>com.thaiopensource</groupId>
                 <artifactId>jing</artifactId>
@@ -1596,7 +1630,11 @@
                 <version>${retrofit2.version}</version>
                 <scope>test</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.maven.shared</groupId>
+                <artifactId>maven-dependency-analyzer</artifactId>
+                <version>${maven-dependency-analyzer.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
