Bug 6007 Check threshold of rule nocturne batch

--- a/vitam-conf-dev/conf/worker/vitam.conf
+++ b/vitam-conf-dev/conf/worker/vitam.conf
@@ -4,6 +4,7 @@ distributeurBatchSize: 800
 distributionThreshold : 100000
 eliminationAnalysisThreshold : 100000
 eliminationActionThreshold : 100000
+computedInheritedRulesThreshold : 100000000
 workerBulkSize: 16
 intervalDelayCheckIdle : 5000
 maxDelayUnusedConnection : 5000
