--- a/sources/logbook/logbook-common-server/pom.xml
+++ b/sources/logbook/logbook-common-server/pom.xml
@@ -70,5 +70,10 @@
             <artifactId>log4j-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
