Bug 6136 persist external parameters with process workflow in the workspace and reuse them in startup of processing"

--- a/sources/functional-administration/functional-administration-rules/functional-administration-rules-core/pom.xml
+++ b/sources/functional-administration/functional-administration-rules/functional-administration-rules-core/pom.xml
@@ -59,6 +59,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>fr.gouv.vitam</groupId>
+            <artifactId>processing-monitoring</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
         </dependency>
@@ -81,11 +86,11 @@
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
-	    <dependency>
-	        <groupId>org.apache.logging.log4j</groupId>
-	        <artifactId>log4j-core</artifactId>
-	        <scope>test</scope>
-	    </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.flipkart.zjsonpatch</groupId>
             <artifactId>zjsonpatch</artifactId>
