--- a/deployment/ansible-vitam/roles/vitam/vars/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/vars/main.yml
@@ -8,6 +8,7 @@ vitam_folder_lib: "{{ vitam_defaults.folder.root_path }}/lib/{{ vitam_struct.vit
 vitam_folder_log: "{{ vitam_defaults.folder.root_path }}/log/{{ vitam_struct.vitam_component }}"
 vitam_folder_scripts: "{{ vitam_defaults.folder.root_path }}/script/{{ vitam_struct.vitam_component }}"
 vitam_folder_tmp: "{{ vitam_defaults.folder.root_path }}/tmp/{{ vitam_struct.vitam_component }}"
+vitam_folder_run: "{{ vitam_defaults.folder.root_path }}/run/{{ vitam_struct.vitam_component }}"
 
 base_url: "{{ vitam_struct|client_url }}"
 
