A way to fix badly containers vCPUs computations and LXC THP problems

--- a/deployment/ansible-vitam/roles/mongo_common/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongo_common/tasks/main.yml
@@ -93,6 +93,6 @@
         enabled: yes
         state: started
 
-  when: ( ansible_virtualization_type != "docker") and ( transparent_hugepage_dir.stat.isdir is defined and transparent_hugepage_dir.stat.isdir )
+  when: ( ansible_virtualization_type not in ["docker","lxc"] ) and ( transparent_hugepage_dir.stat.isdir is defined and transparent_hugepage_dir.stat.isdir )
 
   
