Fix : possibility not to install docker in extra via var

--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -84,3 +84,4 @@ docker_opts:
     vitam_docker_tag: latest
 
 gatling_install: false
+docker_install: true # whether or not install docker & docker images
