Small fix for possibility not to install docker in extra via var

--- a/deployment/ansible-vitam-extra/dev-tools.yml
+++ b/deployment/ansible-vitam-extra/dev-tools.yml
@@ -7,16 +7,16 @@
 
 - hosts: hosts_dev_tools
   roles:
-    - {role: elasticsearch-head, when: (inventory_hostname not in single_vm_hostnames) and (docker_install|lower == 'true')"}
+    - {role: elasticsearch-head, when: "(inventory_hostname not in single_vm_hostnames) and (docker_install|lower == 'true')"}
 
 - hosts: hosts_mongos_data
   roles:
-    - {role: mongo-express, when: (inventory_hostname not in single_vm_hostnames) and (docker_install|lower == 'true')"}
+    - {role: mongo-express, when: "(inventory_hostname not in single_vm_hostnames) and (docker_install|lower == 'true')"}
   vars:
     group_name: "hosts_mongos_data"
 
 - hosts: hosts_mongos_offer
   roles:
-    - {role: mongo-express, when: (inventory_hostname not in single_vm_hostnames) and (docker_install|lower == 'true')"}
+    - {role: mongo-express, when: "(inventory_hostname not in single_vm_hostnames) and (docker_install|lower == 'true')"}
   vars:
     group_name: "hosts_mongos_offer"
