Fix URL to download maven in docker

--- a/dev-deployment/dev-base/Dockerfile-deb
+++ b/dev-deployment/dev-base/Dockerfile-deb
@@ -63,7 +63,7 @@ RUN apt-get clean && apt-get update && apt-get install -y curl && apt-get clean
 ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
 
 # Install & configure maven
-RUN curl -k http://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.3.9/apache-maven-3.3.9-bin.tar.gz --output /tmp/maven.tgz \
+RUN curl -k https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.3.9/apache-maven-3.3.9-bin.tar.gz --output /tmp/maven.tgz \
    && tar xvzf /tmp/maven.tgz --directory /opt \
    && rm -f /tmp/maven.tgz \
    && ln -s /opt/apache-maven-3.3.9 /opt/maven \
