item 6164 ingest cleanup recette

--- a/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
+++ b/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
@@ -39,3 +39,10 @@ elasticsearchNodes:
 
 workspaceUrl: http://workspace.service.consul:8201/
 
+# Functional Admin Configuration
+functionalAdminAdmin:
+   functionalAdminServerHost: functional-administration.service.consul
+   functionalAdminServerPort: 18004
+   adminBasicAuth:
+     userName: adminUser
+     password: adminPassword
