--- a/sources/functional-administration/functional-administration-rest/src/test/resources/functional-admin-reconstruction-test.conf
+++ b/sources/functional-administration/functional-administration-rest/src/test/resources/functional-admin-reconstruction-test.conf
@@ -10,7 +10,7 @@ processingUrl: http://localhost:8202
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
 listEnableExternalIdentifiers:
   0:
     - INGEST_CONTRACT
