--- a/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-auth-test.conf
+++ b/sources/functional-administration/functional-administration-rest/src/test/resources/functional-administration-auth-test.conf
@@ -13,4 +13,4 @@ processingUrl: http://localhost:8201
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
