--- a/sources/ihm-recette/ihm-recette-web-application/src/test/resources/ihm-recette-noPort.conf
+++ b/sources/ihm-recette/ihm-recette-web-application/src/test/resources/ihm-recette-noPort.conf
@@ -20,4 +20,4 @@ mongoDbNodes:
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
