--- a/sources/ihm-recette/ihm-recette-web-application/src/test/resources/ihm-recette.conf
+++ b/sources/ihm-recette/ihm-recette-web-application/src/test/resources/ihm-recette.conf
@@ -23,6 +23,6 @@ mongoDbNodes:
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
 
 
