--- a/sources/integration-test/src/test/resources/common/functional-administration.conf
+++ b/sources/integration-test/src/test/resources/common/functional-administration.conf
@@ -11,7 +11,7 @@ processingUrl: http://localhost:8097
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 9200
+    httpPort: 9200
 
 # ExternalId configuration
 listEnableExternalIdentifiers:   
