--- a/sources/integration-test/src/test/resources/common/logbook.conf
+++ b/sources/integration-test/src/test/resources/common/logbook.conf
@@ -36,7 +36,7 @@ opEventsNotInWf: [
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 9200
+    httpPort: 9200
 alertEvents:
 - evType: 'CHECK_HEADER.CHECK_CONTRACT_INGEST.UNKNOWN'
   outcome: 'KO'
