--- a/sources/integration-test/src/test/resources/common/metadata.conf
+++ b/sources/integration-test/src/test/resources/common/metadata.conf
@@ -8,6 +8,6 @@ jettyConfig: common/jetty-metadata-config-test.xml
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 9200
+    httpPort: 9200
 workspaceUrl: http://localhost:8094
 urlProcessing: http://localhost:8097
