--- a/sources/integration-test/src/test/resources/integration-metadata-migration/metadata-auth.conf
+++ b/sources/integration-test/src/test/resources/integration-metadata-migration/metadata-auth.conf
@@ -9,6 +9,6 @@ jettyConfig: jetty-config-test.xml
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
 workspaceUrl: http://localhost:8094
 urlProcessing: http://localhost:8097
