--- a/sources/metadata/metadata-rest/src/test/resources/metadata-auth.conf
+++ b/sources/metadata/metadata-rest/src/test/resources/metadata-auth.conf
@@ -9,4 +9,4 @@ jettyConfig: jetty-config-test.xml
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
