--- a/sources/processing/processing-management-client/src/test/resources/metadata.conf
+++ b/sources/processing/processing-management-client/src/test/resources/metadata.conf
@@ -5,4 +5,4 @@ jettyConfig: jetty-metadata-config-test.xml
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
