--- a/vitam-conf-dev/conf/functional-administration/functional-administration.conf
+++ b/vitam-conf-dev/conf/functional-administration/functional-administration.conf
@@ -26,7 +26,7 @@ processingUrl: http://processing.service.consul:8203/
 clusterName: elasticsearch-data
 elasticsearchNodes:
 - hostName: localhost
-  tcpPort: 9300
+  httpPort: 9200
 
 
 # ExternalId configuration
