--- a/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
+++ b/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
@@ -35,7 +35,7 @@ dbPassword: azerty
 clusterName: elasticsearch-data
 elasticsearchNodes:
 - hostName: localhost
-  tcpPort: 9300
+  httpPort: 9200
 
 workspaceUrl: http://workspace.service.consul:8201/
 
