--- a/vitam-conf-dev/conf/logbook/logbook.conf
+++ b/vitam-conf-dev/conf/logbook/logbook.conf
@@ -17,7 +17,7 @@ processingUrl: http://processing.service.consul:8203/
 clusterName: elasticsearch-data
 elasticsearchNodes:
 - hostName: localhost
-  tcpPort: 9300
+  httpPort: 9200
 
 #Basic Authentication
 adminBasicAuth:
