--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -30,7 +30,7 @@ jettyConfig: jetty-config.xml
 clusterName: elasticsearch-data
 elasticsearchNodes:
 - hostName: localhost
-  tcpPort: 9300
+  httpPort: 9200
 
 #Basic Authentication
 adminBasicAuth:
