--- a/deb/vitam-product/vitam-elasticsearch-data/DEBIAN/control
+++ b/deb/vitam-product/vitam-elasticsearch-data/DEBIAN/control
@@ -3,6 +3,6 @@ Version: 7.6.0
 Section: database
 Priority: optional
 Architecture: all
-Depends: bash, vitam-user-vitamdb, elasticsearch ( =7.6.0), openjdk-8-jre, systemd, vitam-elasticsearch-analysis-icu ( =7.6.0)
+Depends: bash, vitam-user-vitamdb, elasticsearch ( =7.6.0), openjdk-11-jre-headless, systemd, vitam-elasticsearch-analysis-icu ( =7.6.0)
 Maintainer: French Prime minister Office/SGMAP/DINSIC/Vitam Program <contact.vitam@culture.gouv.fr>
 Description: Elasticsearch is a distributed RESTful search engine built for the cloud. This package contains the service script and basic configuration for the archive data cluster for VITAM.
