--- a/sources/logbook/logbook-rest/src/test/resources/logbook-test.conf
+++ b/sources/logbook/logbook-rest/src/test/resources/logbook-test.conf
@@ -10,7 +10,7 @@ processingUrl: http://localhost:8097
 clusterName: elasticsearch-data
 elasticsearchNodes:
   - hostName: localhost
-    tcpPort: 54321
+    httpPort: 54321
 opWithLFC: []
 opLfcEventsToSkip: []
 opEventsNotInWf: []
